# core

./: .ai-reviewer.yaml  .cursorrules  .dockerignore  .eslintrc.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  AGENTS.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_RETHINK.md  BUILD_WORKAROUND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS.md  CONTEXT-contracts-groups.md  CONTEXT_GROUPS_IMPL_PLAN.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT  CRITICAL_BUGS_FIXED.md  Cargo.toml  DEVELOPMENT_SETUP.md  DOCKER-RELAYER.md  DOCKER-SETUP.md  DOCKER_RELAYER.md  Dockerfile  Dockerfile.auth  Dockerfile.build  Dockerfile.mock-relayer  Dockerfile.relayer  E2E_DEBUGGING_STATUS.md  E2E_MISMATCH_ANALYSIS.md  EPIC_SESSION_SUMMARY.md  FINAL_ARCHITECTURE.md  FINAL_TRANSFORMATION_SUMMARY.md  FIX-HASH-COMPARISON-SYNC.md  GOSSIPSUB_MESH_INVESTIGATION.md  (+97 more)
apps/abi_conformance/: Cargo.toml  README.md  abi.expected.json  abi.generated.json  build.rs  build.sh
apps/abi_conformance/src/: custom_types.rs  lib.rs
apps/abi_conformance/workflows/: abi-conformance.yml
apps/abi_demo/: Cargo.toml  README.md  build.rs
apps/abi_demo/src/: lib.rs
apps/abi_demo/tests/: determinism.rs  runtime_smoke.rs
apps/access-control/: Cargo.toml  README.md  build-bundle.sh  build.sh
apps/access-control/res/: access_control.wasm
apps/access-control/src/: lib.rs
apps/access-control/workflows/: test_access_control.yml
apps/app-template/: Cargo.toml
apps/blob-test/: Cargo.toml  README.md  build.sh
apps/blob-test/frontend/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
apps/blob-test/frontend/src/: App.tsx  index.css  index.tsx
apps/blob-test/src/: lib.rs
apps/blobs/: Cargo.toml  README.md  build.sh
apps/blobs/src/: lib.rs
apps/blobs/workflows/: blobs-example.yml  blobs.yml
apps/blockchain/: Cargo.toml  build.sh
apps/blockchain/src/: lib.rs
apps/collection-storage-test/: Cargo.toml  build.sh
apps/collection-storage-test/src/: lib.rs
apps/collections-benchmark-rust/: Cargo.toml  README.md  build.sh
apps/collections-benchmark-rust/scripts/: generate-benchmark-report.sh
apps/collections-benchmark-rust/src/: lib.rs
apps/collections-benchmark-rust/workflows/: benchmark-rust.yml
apps/commit-reveal-rps/: Cargo.toml  build.sh
apps/commit-reveal-rps/src/: lib.rs
apps/demo-blockchain-integrations/: Cargo.toml  README.md  build.rs  build.sh
apps/demo-blockchain-integrations/src/: lib.rs
apps/e2e-kv-store/: Cargo.toml  build-bundle.sh  build-multi-service-bundle.sh  build.sh
apps/e2e-kv-store/src/: lib.rs
apps/e2e-kv-store/static/: test.txt
apps/e2e-kv-store/workflows/: e2e.yml  group-3node.yml  group-capabilities.yml  group-context-isolation.yml  group-default-capabilities-propagation.yml  group-late-joiner.yml  group-membership.yml  group-multi-service.yml  group-nesting.yml  group-orphan-delete.yml  group-reparent-and-cascade-delete.yml  group-reparent.yml  group-subgroup-cold-sync.yml  group-subgroup-queued-deltas.yml  group-subgroup-visibility-inheritance.yml  group-subgroup.yml  groups.yml  handler-test.yml  kv-store-joiner-cold.yml  simple-sync.yml
apps/event-callback/: Cargo.toml  IMPLEMENTATION.md  build.rs  build.sh  workflow.yml
apps/event-callback-example/: Cargo.toml  build.sh
apps/event-callback-example/src/: lib.rs
apps/event-callback/src/: lib.rs
apps/event-callback/workflows/: example.yml
apps/gen-ext/: Cargo.toml  build.sh
apps/gen-ext/src/: lib.rs
apps/kv-store-init/: Cargo.toml  build.sh
apps/kv-store-init/src/: lib.rs
apps/kv-store-init/workflows/: kv-store-init.yml  workflow-init.yml
calimero-api/: Cargo.toml
calimero-api/src/: lib.rs  ws.rs
calimero-api/test-data/: request-install-remote-app.json
calimero-controller/: Cargo.toml
calimero-controller/src/: lib.rs  subscriptions.rs
calimero-peer/: Cargo.toml
calimero-peer/src/: main.rs
chat-p0c/: Cargo.toml  gen_localnet_configs.sh
chat-p0c/src/: cli.rs  config.rs  endpoint.rs  init.rs  main.rs  networking.rs
chat-p0c/src/events/: kad.rs  mod.rs  ping.rs  relay.rs
chat-p0c/src/network/: mod.rs
chat-p0c/src/network/events/: gossipsub.rs  identify.rs  kad.rs  mdns.rs  mod.rs  ping.rs
client-rs/: Cargo.toml  README.md
client-rs/src/: api.rs  commands.rs  init.rs  login_handler.rs  main.rs  network.rs  output.rs  storage.rs  ws_client.rs
controller/: Cargo.toml
controller/src/: lib.rs  subscriptions.rs
e2e-tests/: Cargo.toml  README.md
e2e-tests/config/: config.json
e2e-tests/config/protocols/ethereum/: demo-blockchain-integrations.json  event-callback-test.json  kv-store-test.json
e2e-tests/config/protocols/icp/: demo-blockchain-integrations.json  kv-store-test.json
e2e-tests/config/protocols/near/: test.json  (+12 more)
e2e-tests/contracts/: near
e2e-tests/src/: application_install_stream.rs  config.rs  driver.rs  main.rs  meroctl.rs  merod.rs  output.rs  protocol.rs  steps.rs  tmp.rs  utils.rs
e2e-tests/src/protocol/: ethereum.rs  evm.rs  icp.rs  near.rs  stellar.rs  zksync.rs
e2e-tests/src/steps/: application_install.rs  context_create.rs  context_create_alias.rs  context_invite_join.rs  context_invite_join_open.rs  get_proposals.rs  jsonrpc_call.rs  jsonrpc_execute.rs  verify_external_state.rs  wait.rs
identity-rs/: .gitignore  Cargo.toml  README.md
identity-rs/src/: dht.rs  identity_provider.rs  main.rs  types.rs  vault.rs  vc.rs  vp.rs
peer/: Cargo.toml
peer-space/: Cargo.toml  schema.graphql
peer-space/src/: auth_middleware.rs  graphql.rs  main.rs
peer/src/: config.rs  main.rs
streaming-api/: Cargo.toml
streaming-api/src/: api.rs  app_store.rs  controller.rs  lib.rs  main.rs  runtime.rs
streaming-api/test-data/: db.json
streaming-api/test-data/messages/: list-apps.json  start-pod.json  stop-pod.json  subscribe.json
typescript-wasm-demo/: Cargo.toml  README.md  calimero-demo.html  demo.html  mock-demo.html  output.rs  package.json  test-wasm.html  transpiler.js  tsconfig.json
xtask/: Cargo.toml
xtask/src/: main.rs
(+4157 files in other folders)
