[workspace.package]
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
repository = "https://github.com/calimero-network/core"
license = "MIT OR Apache-2.0"
license-file = "LICENSE.md"

[workspace]
resolver = "2"
members = [
    "./crates/config",
    "./crates/context",
    "./crates/context/config",
    "./crates/crypto",
    "./crates/meroctl",
    "./crates/merod",
    "./crates/network",
    "./crates/node",
    "./crates/node-primitives",
    "./crates/primitives",
    "./crates/runtime",
    "./crates/sdk",
    "./crates/sdk/libs/near",
    "./crates/sdk/macros",
    "./crates/server",
    "./crates/server-primitives",
    "./crates/storage",
    "./crates/storage-macros",
    "./crates/store",
    "./crates/store/blobs",
    "./crates/utils/actix",

    "./apps/kv-store",
    "./apps/only-peers",
    "./apps/gen-ext",
    "./apps/visited",

    "./contracts/near/registry",
    "./contracts/near/context-config",
    "./contracts/near/context-proxy",
    "./contracts/near/test-counter",

    "./contracts/icp/context-config",
    "./contracts/icp/context-proxy",
    "./contracts/icp/context-proxy/mock/external",

    "./contracts/stellar/context-config",
    "./contracts/stellar/context-proxy/mock_external",
    "./contracts/stellar/context-proxy",

    "./e2e-tests",
]

[workspace.dependencies]
actix = "0.13.5"
assert-json-diff = "2.0.2"
async-stream = "0.3.5"
axum = "0.7.4"
base64 = "0.22.0"
bincode = "1.3.3"
borsh = "1.3.1"
bs58 = "0.5.0"
bytes = "1.6.0"
candid = "0.10.10"
camino = "1.1.6"
cfg-if = "1.0.0"
chrono = "0.4.37"
claims = "0.7.1"
clap = "4.4.18"
color-eyre = "0.6.2"
const_format = "0.2.32"
curve25519-dalek = "4.1.3"
dirs = "5.0.1"
ed25519-dalek = "2.1.1"
ed25519-consensus = "2.1.0"
either = "1.13.0"
eyre = "0.6.12"
fixedstr = "0.5.7"
fragile = "2.0.0"
futures-util = "0.3.30"
generic-array = "1.0.0"
hex = "0.4.3"
http = "1.1.0"
http-serde = "2.1.1"
ic-agent = "0.39.1"
ic-canister-sig-creation = "1.1"
ic-cdk = "0.16"
ic-signature-verification = "0.2"
indexmap = "2.6.0"
jsonwebtoken = "9.3.0"
libp2p = "0.53.2"
libp2p-stream = "0.1.0-alpha.1"
libp2p-identity = "0.2.9"
multiaddr = "0.18.1"
near-account-id = "1.0.0"
near-crypto = "0.27.0"
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27.0"
near-primitives = "0.27.0"
near-sdk = "5.5.0"
near-workspaces = "0.15.0"
notify = "6.1.1"
ouroboros = "0.18.3"
owo-colors = "3.5.0"
parking_lot = "0.12.3"
paste = "1.0.15"
prettyplease = "0.2.17"
proc-macro2 = "1.0"
quote = "1.0.37"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = "0.12.2"
ring = "0.17.8"
rocksdb = "0.22.0"
rust-embed = "8.5.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
semver = "1.0.22"
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.9.0"
soroban-env-common = "22.1.3"
soroban-sdk = { version = "22.0.5", features = ["alloc"] }
starknet = "0.12.0"
starknet-crypto = "0.7.1"
starknet-types-core = "0.1.7"
stellar-xdr = { version = "22.1.0", default-features = false }
stellar-baselib = "0.4.6"
strum = "0.26.2"
soroban-client = "0.3.7"
syn = "2.0"
tempdir = "0.3.7"
tempfile = "3.12.0"
thiserror = "1.0.56"
thunderdome = "0.6.1"
tokio = "1.35.1"
tokio-test = "0.4.4"
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.11"
tokio-stream = "0.1.17"
toml = "0.8.9"
toml_edit = "0.22.14"
tower = "0.4.13"
tower-http = "0.5.2"
tower-sessions = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trybuild = "1.0"
ureq = "2.9.7"
url = "2.5.2"
velcro = "0.5.4"
wasmer = "4.2.5"
wasmer-types = "4.2.5"
web3 = "0.19.0"
local-ip-address = "0.6.1"
rcgen = "0.13.1"
x509-parser = "0.16.0"
axum-server = "0.6"
axum-server-dual-protocol = "0.6.0"

calimero-config = { path = "./crates/config" }
calimero-context = { path = "./crates/context" }
calimero-context-config = { path = "./crates/context/config" }
calimero-crypto = { path = "./crates/crypto" }
meroctl = { path = "./crates/meroctl" }
merod = { path = "./crates/merod" }
calimero-network = { path = "./crates/network" }
calimero-node = { path = "./crates/node" }
calimero-node-primitives = { path = "./crates/node-primitives" }
calimero-primitives = { path = "./crates/primitives" }
calimero-runtime = { path = "./crates/runtime" }
calimero-sdk = { path = "./crates/sdk" }
calimero-sdk-near = { path = "./crates/sdk/libs/near" }
calimero-sdk-macros = { path = "./crates/sdk/macros" }
calimero-server = { path = "./crates/server" }
calimero-server-primitives = { path = "./crates/server-primitives" }
calimero-storage = { path = "./crates/storage" }
calimero-storage-macros = { path = "./crates/storage-macros" }
calimero-store = { path = "./crates/store" }
calimero-blobstore = { path = "./crates/store/blobs" }
e2e-tests = { path = "./e2e-tests" }
calimero-utils-actix = { path = "./crates/utils/actix" }

kv-store = { path = "./apps/kv-store" }
only-peers = { path = "./apps/only-peers" }
gen-ext = { path = "./apps/gen-ext" }
visited = { path = "./apps/visited" }

calimero-registry = { path = "./contracts/near/registry" }
calimero-context-config-near = { path = "./contracts/near/context-config" }
calimero-context-proxy-near = { path = "./contracts/near/context-proxy" }
calimero-test-counter-near = { path = "./contracts/near/test-counter" }

calimero-context-contract-icp = { path = "./contracts/icp/context-config" }
calimero-proxy-contract-icp = { path = "./contracts/icp/context-proxy" }
calimero-mock-ledger-icp = { path = "./contracts/icp/context-proxy/mock/ledger" }
calimero-mock-external-icp = { path = "./contracts/icp/context-proxy/mock/external" }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace.lints.rust]
# Future compatibility lints
future_incompatible = { level = "deny", priority = -1 }

# Deprecated approach lints
rust_2018_compatibility = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }

# Unused code lints
unused = { level = "warn", priority = -1 }

# Cherry-picked lints
## Forbid
#unsafe_code = "forbid" TODO: Unsafe code is needed at present
#unsafe_op_in_unsafe_fn = "forbid" TODO: Unsafe code is needed at present
## Deny
deprecated = "deny"
deprecated_where_clause_location = "deny"
incomplete_features = "deny"
internal_features = "deny"
macro_use_extern_crate = "deny"
unknown_lints = "deny"
unnameable_test_items = "deny"
#unreachable_pub = "deny" TODO: Enable later
## Warn
let_underscore_drop = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
#missing_docs = "warn" TODO: Enable later once documentation has been added
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Clippy lint categories
#cargo = { level = "warn", priority = -1 } TODO: Enable later
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Clippy cargo lints
#negative_feature_names = "deny" TODO: Enable later
#wildcard_dependencies = "deny" TODO: Enable later

# Clippy pedantic lints
## Deny
pub_underscore_fields = "deny"
## Allow
module_name_repetitions = "allow"

# Clippy restriction lints
## Forbid TODO: Make these forbid ASAP
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
exit = "deny"
infinite_loop = "deny"
missing_assert_message = "deny"
#missing_docs_in_private_items = "forbid" TODO: Enable later once documentation has been added
mod_module_files = "deny"
panic_in_result_fn = "deny"
str_to_string = "deny"
string_to_string = "deny"
tests_outside_test_module = "deny"
#unimplemented = "forbid" TODO: Enable as soon as possible, once first release is stable
unwrap_in_result = "deny" # TODO: Change to "forbid" once all unwraps have been removed
## Deny
clone_on_ref_ptr = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
#expect_used = "deny" TODO: Enable as soon as possible
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
# impl_trait_in_params = "deny"
integer_division = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
#panic = "deny" TODO: Enable as soon as possible
rc_mutex = "deny"
try_err = "deny"
#unwrap_used = "deny" TODO: Enable as soon as possible
wildcard_enum_match_arm = "deny"
## Warn
absolute_paths = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
#field_scoped_visibility_modifiers = "warn" TODO: Enable later
filetype_is_file = "warn"
if_then_some_else_none = "warn"
#indexing_slicing = "warn" TODO: Enable this later when dealing with unwraps
iter_over_hash_type = "warn"
let_underscore_must_use = "warn"
#let_underscore_untyped = "warn" TODO: Consider enabling later
#map_err_ignore = "warn" TODO: Consider enabling later
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
#pattern_type_mismatch = "warn" TODO: Consider enabling later
pub_without_shorthand = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
#same_name_method = "warn" TODO: Consider enabling later
semicolon_inside_block = "warn"
#shadow_reuse = "warn" TODO: Consider enabling later
#shadow_same = "warn" TODO: Consider enabling later
#shadow_unrelated = "warn" TODO: Consider enabling later
std_instead_of_core = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
#todo = "warn" TODO: Enable once all implemented
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
#unreachable = "warn" TODO: Consider enabling later
unseparated_literal_suffix = "warn"
#use_debug = "warn" TODO: Consider enabling later
verbose_file_reads = "warn"

# Clippy suspicious lints
const_is_empty = "deny"
deprecated_clippy_cfg_attr = "deny"
incompatible_msrv = "deny"
multiple_bound_locations = "deny"
unconditional_recursion = "deny"
unnecessary_clippy_cfg = "deny"

# Lint customisations
doc_markdown = "allow"            # Annoying number of false positives
multiple_crate_versions = "allow" # Cannot resolve all these
missing_errors_doc = "allow"      # TODO: Remove later once documentation has been added
missing_panics_doc = "allow"      # TODO: Remove later once documentation has been added
future_not_send = "allow"         # TODO: Remove later once Send is implemented

[patch.crates-io]
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "5c676a6" }
