[workspace.package]
version = "0.0.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
repository = "https://github.com/calimero-network/core"
license = "MIT OR Apache-2.0"
description = "Core Calimero infrastructure and tools"

# Update workspace metadata
[workspace.metadata.workspaces]
# Shared version of all public crates in the workspace.
# [IMPORTANT: do not remove comments from next line, used as search anchor]
version = "0.0.0" # crates_version
exclude = [
    "./apps/abi_conformance",
    "./apps/access-control",
    "./apps/blobs",
    "./apps/collaborative-editor",
    "./apps/kv-store",
    "./apps/kv-store-init",
    "./apps/kv-store-with-handlers",
	"./apps/kv-store-with-user-and-frozen-storage",
    "./apps/nested-crdt-test",
    "./apps/team-metrics-macro",
    "./apps/team-metrics-custom",
    "./apps/private_data",
    "./apps/state-schema-conformance",
    "./apps/xcall-example",
    "./apps/collections-benchmark-rust",
    "./crates/merod",
    "./crates/version",
    "./crates/meroctl",
    "./crates/auth",
    "./tools/calimero-abi",
]

[workspace]
resolver = "2"
members = [
    "./crates/auth",
    "./crates/config",
    "./crates/context",
    "./crates/context/config",
    "./crates/context/primitives",
    "./crates/crypto",
    "./crates/dag",
    "./crates/meroctl",
    "./crates/client",
    "./crates/merod",
    "./crates/relayer",
    "./crates/network",
    "./crates/network/primitives",
    "./crates/node",
    "./crates/node/primitives",
    "./crates/prelude",
    "./crates/primitives",
    "./crates/runtime",
    "./crates/sdk",
    "./crates/sdk/libs/near",
    "./crates/sdk/macros",
    "./crates/server",
    "./crates/server/primitives",
    "./crates/storage",
    "./crates/storage-macros",

    "./crates/store",
    "./crates/store/blobs",
    "./crates/store/impl/rocksdb",
    "./crates/sys",
    "./crates/utils/actix",
    "./crates/version",
    "./crates/wasm-abi",

    "./apps/access-control",
    "./apps/kv-store",
    "./apps/kv-store-init",
    "./apps/kv-store-with-handlers",
	"./apps/kv-store-with-user-and-frozen-storage",
    "./apps/nested-crdt-test",
    "./apps/team-metrics-macro",
    "./apps/team-metrics-custom",
    "./apps/private_data",
    "./apps/blobs",
    "./apps/collaborative-editor",
    "./apps/abi_conformance",
    "./apps/state-schema-conformance",
    "./apps/xcall-example",
    "./apps/collections-benchmark-rust",

    "./tools/calimero-abi",
    "./tools/merodb",
    "./crates/storage-wasm",
]

[workspace.dependencies]
actix = "0.13.5"
alloy = "1.0"
alloy-sol-types = "1.4"
assert-json-diff = "2.0.2"
async-stream = "0.3.5"
async-trait = "0.1.89"
axum = "0.7.4"
base64 = "0.22.0"
borsh = "1.3.1"
bs58 = "0.5.0"
bytes = "1.6.0"
cached-path = "0.8.1"
camino = "1.1.6"
candid = "0.10.10"
cargo_metadata = "0.20.0"
cfg-if = "1.0.0"
chrono = "0.4.37"
claims = "0.7.1"
clap = "4.4.18"
serial_test = "3.2"
color-eyre = "0.6.2"
comfy-table = "7.0"
configfs-tsm = "0.0.2"
const_format = "0.2.32"
curve25519-dalek = "4.1.3"
dashmap = "6.1.0"
dcap-qvl = "0.3"
dirs = "5.0.1"
ed25519-consensus = "2.1.0"
ed25519-dalek = "2.1.1"
either = "1.13.0"
ethabi = "18.0.0"
eyre = "0.6.12"
fixedstr = "0.5.7"
flate2 = "1.0"
fragile = "2.0.0"
futures-util = "0.3.30"
generic-array = "1.0.0"
hex = "0.4.3"
ic-agent = "0.39.1"
indexmap = "2.6.0"
infer = "0.19.0"
itertools = "0.14.0"
jsonschema = "0.17"
jsonwebtoken = "9.3.0"
lazy_static = "1.4"
libp2p = "0.56.0"
libp2p-identity = "0.2.12"
libp2p-metrics = "0.17.0"
libp2p-stream = "0.4.0-alpha"
libp2p-swarm-test = "0.6.0"
memchr = "2"
multiaddr = "0.18.1"
near-account-id = "1.0.0"
near-crypto = "0.27.0"
near-jsonrpc-client = "0.14.0"
near-jsonrpc-primitives = "0.27.0"
near-primitives = "0.27.0"
near-workspaces = "0.15.0"
notify = "6.1.1"
once_cell = "1.18"
ouroboros = "0.18.5"
owo-colors = "3.5.0"
parking_lot = "0.12.3"
paste = "1.0.15"
prettyplease = "0.2.17"
proc-macro2 = "1.0"
prometheus-client = "0.23"
quote = "1.0.37"
rand = "0.8.5"
reqwest = "0.12.2"
ring = "0.17.8"
rocksdb = "0.22.0"
rust-embed = "8.5.0"
rustc_version = "0.4"
semver = "1.0.22"
serde = "1.0.196"
serde_json = "1.0.113"
serde_with = "3.9.0"
sha2 = "0.10.8"
starknet = "0.17.0"
starknet-core = "0.16.0"
starknet-core-derive = "0.1.0"
starknet-crypto = "0.8.1"
starknet-types-core = "0.2.0"
strum = "0.26.2"
syn = { version = "2.0", features = ["full"] }
tar = "0.4"
tempdir = "0.3.7"
tempfile = "3.10"
tdx-quote = "0.0.4"
tdx_workload_attestation = "0.1.0"
thiserror = "1.0.56"
thunderdome = "0.6.1"
tokio = "1.47.1"
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tokio-tungstenite = "0.24.0"
tokio-util = "0.7.11"
toml = "0.8.9"
toml_edit = "0.22.14"
tower = "0.4.13"
tower-http = "0.5.2"
tower-sessions = "0.12.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trybuild = "1.0"
ureq = "2.9.7"
url = "2.5.2"
velcro = "0.5.4"
wasmer = "4.2.5"
wasmer-types = "4.2.5"
web3 = "0.19.0"
webbrowser = "1.0.4"
pyo3 = "0.20"

calimero-blobstore = { path = "./crates/store/blobs" }
calimero-client = { path = "./crates/client" }
calimero-config = { path = "./crates/config" }
calimero-context = { path = "./crates/context" }
calimero-context-config = { path = "./crates/context/config" }
calimero-context-primitives = { path = "./crates/context/primitives" }
calimero-crypto = { path = "./crates/crypto" }
calimero-dag = { path = "./crates/dag" }
calimero-network = { path = "./crates/network" }
calimero-network-primitives = { path = "./crates/network/primitives" }
calimero-node = { path = "./crates/node" }
calimero-node-primitives = { path = "./crates/node/primitives" }
calimero-primitives = { path = "./crates/primitives" }
calimero-runtime = { path = "./crates/runtime" }
calimero-sdk = { path = "./crates/sdk" }
calimero-sdk-macros = { path = "./crates/sdk/macros" }
calimero-sdk-near = { path = "./crates/sdk/libs/near" }
calimero-server = { path = "./crates/server" }
calimero-server-primitives = { path = "./crates/server/primitives" }
calimero-storage = { path = "./crates/storage" }
calimero-storage-macros = { path = "./crates/storage-macros" }
calimero-store = { path = "./crates/store" }
calimero-store-rocksdb = { path = "./crates/store/impl/rocksdb" }
calimero-sys = { path = "./crates/sys" }
calimero-utils-actix = { path = "./crates/utils/actix" }
calimero-version = { path = "./crates/version" }
calimero-wasm-abi = { path = "./crates/wasm-abi" }
kv-store = { path = "./apps/kv-store" }
xcall-example = { path = "./apps/xcall-example" }

[profile.dev]
panic = "unwind"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"

[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
strip = "symbols"
overflow-checks = true
