[package]
name = "calimero_api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
warp.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true

calimero_primitives.path = "../calimero-primitives"
