[package]
name = "calimero_controller"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
futures-util = { workspace = true, default-features = false, features = ["sink"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true

calimero_api.path = "../calimero-api"
calimero_primitives.path = "../calimero-primitives"
