[package]
name = "calimero_controller"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tracing.workspace = true

# calimero_api.path = "../calimero-api"
calimero_primitives.path = "../calimero-primitives"
