[package]
name = "calimero-peer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
camino.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
color-eyre.workspace = true
dirs.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

calimero-api.path = "../calimero-api"
