[package]
name = "chat-p0c"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bs58.workspace = true
camino.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
color-eyre.workspace = true
dirs.workspace = true
libp2p = { workspace = true, features = ["full"] }
serde.workspace = true
tokio = { workspace = true, features = ["io-std", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
