[package]
name = "chat-p0c"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
bs58.workspace = true
camino.workspace = true
clap = { workspace = true, features = ["env", "derive"] }
color-eyre.workspace = true
dirs.workspace = true
jsonrpc = "0.17.0"
jsonrpsee = { version = "0.22.0", features = ["full"] }
jsonrpsee-core = "0.22"
jsonrpsee-client-transport = { version = "0.22", features = [ "ws" ] }
jsonrpsee-ws-client = { version = "0.22", default-features = false }
libp2p = { workspace = true, features = ["full"] }
once_cell = "1.19.0"
serde.workspace = true
tokio = { workspace = true, features = ["io-std", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
jsonrpc-http-server = "18.0.0"
jsonrpsee-proc-macros = "0.22.0"
jsonrpsee-types = "0.22.0"
axum = "0.6.20"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
jsonrpsee-http-server = "0.15.1"
