[package]
name = "cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["env", "cargo", "derive"] }
color-eyre = "0.6.2"
colored = "2.1.0"
dirs = "5.0.1"
indicatif = "0.17.8"
inquire = "0.6.2"
libp2p.workspace = true
open = "5.0.1"
prettytable-rs = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
camino.workspace = true
toml.workspace = true
bs58.workspace = true
tracing.workspace = true
tokio.workspace = true
