[package]
name = "e2e-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["env", "derive"] }
const_format.workspace = true
eyre.workspace = true
near-workspaces.workspace = true
nix = { version = "0.29.0", features = ["signal"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
url = { workspace = true }
reqwest = { workspace = true }

# Add ICP dependencies from workspace
ic-agent = { workspace = true }
candid = { workspace = true }

# Add Ethereum dependencies from workspace
alloy = { workspace = true }

# Add Stellar dependencies from workspace
soroban-client = { workspace = true }
soroban-sdk = { workspace = true }
base64 = { workspace = true }
flate2 = "1.1.0"

[lints]
workspace = true
