[package]
name = "e2e-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.22", features = ["tokio", "gzip"] }
camino = { workspace = true, features = ["serde1"] }
clap = { workspace = true, features = ["env", "derive"] }
const_format.workspace = true
eyre.workspace = true
futures-util.workspace = true
near-workspaces.workspace = true
nix = { version = "0.29.0", features = ["signal"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
reqwest.workspace = true
tokio-util.workspace = true
url.workspace = true

# Add ICP dependencies from workspace
ic-agent.workspace = true
candid.workspace = true

# Add Ethereum dependencies from workspace
alloy.workspace = true

# Add Stellar dependencies from workspace
soroban-client.workspace = true
soroban-sdk.workspace = true
base64.workspace = true

[lints]
workspace = true
