[package]
name = "identity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { workspace = true, features = ["full"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
multibase = "0.9.1"
serde = "1.0.196"
