[package]
name = "identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { workspace = true, features = ["full"] }
serde_json.workspace = true
sha2.workspace = true
multibase.workspace = true
serde.workspace = true
