[package]
name = "peer-space"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-graphql = "7.0.1"
async-graphql-actix-web = "7.0.1"
actix-web = { version = "4.0.1", default-features = false, features = ["macros"] }
bs58.workspace = true
tokio = { workspace = true, features = ["macros","rt-multi-thread"] }
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.1"
actix-session = "0.9.0"
futures-util = "0.3.30"

calimero-identity = { path = "../crates/identity" }
serde_json.workspace = true
env_logger = "0.11.2"
